--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
 spring.application.name=fin-control-backend
+
+# api-bank DB
+spring.datasource.url=jdbc:postgresql://localhost:5436/fincontrol
+spring.datasource.username=postgres
+spring.datasource.password=451978wq
+
+#spring.datasource.hikari.maximum-pool-size=2
+
+# Configuração do Hibernate
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.hbm2ddl.auto=none
+spring.jpa.properties.hibernate.default_schema=fin_control
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Flyway
+spring.flyway.enabled=true
+spring.flyway.create-schemas=true
+spring.flyway.default-schema=fin_control
+spring.flyway.schemas=fin_control
+spring.flyway.locations=classpath:db/migration
+
+
